<resources>
    <string name="app_name">Task 5.2 XML</string>

    <string name="main_img_office_title">Tu puesto asignado</string>

    <string name="item_workstation_day_asigned_title">- Día asignado</string>
    <string name="item_workstation_floor_title">Planta</string>
    <string name="item_workstation_place_title">Puesto</string>
    <string name="item_workstation_office_title">Oficina</string>
    <string name="item_workstation_section_title">Área</string>
</resources>